[package]
name = "skip_bom"
version = "0.4.0"
edition = "2018"
description = "Skip the optional encoding BOM at the start of a file if it exists."
repository = "https://github.com/flmmkch/skip_bom"
readme = "README.md"
authors = ["Victor Nivet <victor@saumon.ninja>"]
documentation = "https://docs.rs/skip_bom"
license = "MIT OR Apache-2.0"
categories = ["parsing", "encoding", "filesystem"]
keywords = ["BOM", "read"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Empty for now

[dev-dependencies]
doc-comment = "0.3"
